<resources>
    <string name="app_name">Mobillis</string>
    <string name="add_new_item">adicionar novo financialItem</string>
    <string name="error_item_not_found">Item não encontrado</string>
    <string name="error_invalid_item">Item não preenchido corretamente</string>
    <string name="form_label_description">Descrição</string>
    <string name="salvar">Salvar</string>
    <string name="despesa">Despesa</string>
    <string name="receita">Receita</string>
    <string name="form_label_Value">Valor</string>
    <string name="form_label_data">Data</string>
    <string name="action_new_item">Novo Item</string>

    <plurals name="list_item_selected">
        <item quantity="one">1 selecionado</item>
        <item quantity="other">%d selecionados</item>
    </plurals>
    <string name="message_items_deleted">%d itens excluídos.</string>
    <string name="undo">Desfazer</string>
    <string name="action_delete">Deletar</string>
    <string name="action_edit">Editar</string>
</resources>